feat: add remaining_attempts field & fix retry_after bug
- Add remaining_attempts to login 422 response
- Fix retry_after always returning 0 (diffInSeconds bug)
- Update swagger docs
